GEODE-8705: Fixing issues after rebase
StartServerCommand and StartServerCommandTest amended